downgraded to react-script 3.2 due to issues with web socket, implemented dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  color: white;
 }
 
 .App-logo {
@@ -19,4 +20,13 @@
   bottom: 0;
   left: 0;
   z-index: -1;
+}
+
+.lightMode {
+  background: linear-gradient(to right, #2B32B2, #1488CC);
+}
+
+.darkMode {
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+  color: white;
 }
