--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,3 +1,8 @@
-.Tilt {
-    background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%);
-}
+.lightMode {
+    background: linear-gradient(to right, #2B32B2, #1488CC);
+  }
+  
+  .darkMode {
+    background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
+    color: white;
+  }
