--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Courier New', Courier, monospace;
-  background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%);
+  /*background: linear-gradient(to right, #2B32B2, #1488CC);*/
 }
 
 code {
@@ -13,3 +13,5 @@ code {
 button {
   cursor: pointer;
 }
+
+
